# NeurIPSOpenPolymerPrediction2025

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  COPY_PASTE_FIX.py  Dockerfile  ERROR_HANDLING_IMPLEMENTATION_SUMMARY.md  FINAL_INDEX_FIX.py  FINAL_OPTUNA_INTEGRATION.md  FINAL_SUMMARY.md  FINAL_T4X2_SOLUTION.md  FINAL_WORKING_T4X2_SOLUTION.md  GPU_SETUP_GUIDE.md  INDUSTRY_STANDARDS_CHECKLIST.md  Improved Notebook Blueprint (GPU-Ready, ≤6 GB VRAM.md  Makefile  NOTEBOOK_README.md  NeurIPS Open Polymer Prediction 2025 - Enhanced CPU.md  NeurIPS_Competition_GPU_Enhanced.ipynb  NeurIPS_GPU_Enhanced_Complete.ipynb  NeurIPS_GPU_Enhanced_Final.ipynb  NeurIPS_GPU_Enhanced_Solution.ipynb  NeurIPS_Polymer_Prediction_2025.ipynb  NeurIPS_Polymer_Prediction_2025_Enhanced_CPU.ipynb  NeurIPS_T4x2_Complete_Solution.ipynb  NeurIPS_T4x2_Optimized.ipynb  OPTUNA_INTEGRATION_SUMMARY.md  PRODUCTION_PIPELINE_README.md  QUICK_PREDICTION_FIX.py  README.md  REPOSITORY_ORGANIZATION.md  T4X2_COMPLETE_FIX_SUMMARY.md  T4X2_FINAL_STATUS.md  T4X2_NOTEBOOK_STATUS.md  T4x2_Optimization_Summary.md  T4x2_collate_fix_summary.md  TASK_9_IMPLEMENTATION_SUMMARY.md  TREE_ENSEMBLE_IMPLEMENTATION_SUMMARY.md  activate_and_setup.bat  activate_and_setup.ps1  (+55 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docs.yml
.kiro/specs/polymer-prediction-improvement/: design.md  requirements.md  tasks.md
alternate_code/: approach_2.py
archive/fixes/: fix_all_dataparallel_issues.py  fix_cpu_bottleneck.py  fix_dataparallel_device_issue.py  fix_dataparallel_tensor_issue.py  fix_multi_gpu_device_error.py  fix_performance_issues.py
archive/notebooks/: neurips-t4x2-final-working.ipynb  neurips-t4x2-kaggle-ready.ipynb
archive/scripts/: create_clean_t4x2_notebook.py  create_competition_notebook.py  create_final_correct_notebook.py  create_final_working_notebook.py  create_fixed_dataparallel_notebook.py  create_proper_kaggle_notebook.py  create_single_cell_solution.py
archive/tests/: test_actual_collate.py  test_fixed_collate.py  test_notebook_fix.py  test_notebook_warnings.py  test_optuna_integration.py  test_t4x2_collate.py
catboost_info/: learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
configs/: base_config.yaml
configs/experiment/: default.yaml
configs/model/: gcn.yaml
configs/training/: default.yaml
docs/: api.md  conf.py  examples.md  index.md
docs/fixes/: COLLATE_FIX_SUMMARY.md  DATAPARALLEL_TENSOR_FIX_FINAL.md  PERFORMANCE_OPTIMIZATION_FINAL.md  T4X2_FINAL_TENSOR_FIX.md  T4X2_MULTI_GPU_FIX_SUMMARY.md  T4X2_TENSOR_SHAPE_FIX.md  TENSOR_SHAPE_FIX_SUMMARY.md
examples/: performance_optimization_example.py  stacking_ensemble_example.py  structured_pipeline_example.py  tree_ensemble_example.py
models/: .gitkeep  best_model.pt
python_sandbox/: DATALOADER_FIXES_SUMMARY.md  INTEGRATION_SUMMARY.md  main_clean.py  main_improved.py  main_robust.py  main_untested.py  test_smiles_validation.py
results/: training_history_20250630_214953.json
scripts/: setup_data.py
src/polymer_prediction/: __init__.py  main.py  main_structured.py
src/polymer_prediction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/polymer_prediction/config/: __init__.py  config.py  hydra_config.py
src/polymer_prediction/data/: dataset.py
src/polymer_prediction/models/: __init__.py  ensemble.py  gcn.py  polygin.py  stacking_ensemble.py
src/polymer_prediction/optimization/: __init__.py  performance_integration.py
src/polymer_prediction/pipeline/: __init__.py  data_pipeline.py  main_pipeline.py  prediction_pipeline.py  training_pipeline.py
src/polymer_prediction/preprocessing/: __init__.py  enhanced_featurization.py  featurization.py
src/polymer_prediction/training/: __init__.py  ensemble_trainer.py  optimized_trainer.py  (+2 more)
tests/: test_dataloader.py  test_dataset.py  test_ensemble.py  test_error_handling.py  test_featurization.py  test_gcn_training.py  test_integration.py  test_metrics.py  test_performance_optimization.py  test_smiles_processing.py  test_stacking_ensemble.py  test_structured_pipeline.py  test_validation.py
(+10 files in other folders)
